Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-125630

TextInput.passwordMaskDelay does nothing if echoMode is PasswordEchoOnEdit

XMLWordPrintable

    • 1594b2efc (dev), 3386c861d (6.8)

      It does not seem to have any effect. The password field is always visible when there is a focus in the TextInput. When it loses the focus, whole field is immediately masked.

      import QtQuick.Window
      import QtQuick.Controls.Basic
      import QtQuick
      
      ApplicationWindow {
          id: main
          visible: true
          width: 300
          height: 300
      
          TextField {
              focus: true
              echoMode: TextField.PasswordEchoOnEdit
              passwordMaskDelay: 100
          }
      }
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vgt Eirik Aavitsland
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes