Improve documentation of TextInput password modes

The documentation of masking behavior and the relation to the
passwordMaskDelay was somewhat unclear.

Fixes: QTBUG-125630
Pick-to: 6.8
Change-Id: I96f6168469539a0241b53ba8f31c911ac2fc9bdb
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>